# labrador-ldpc

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: decode.rs  encode.rs  initialise.rs  iter_paritychecks.rs
capi/: Cargo.toml  README.md
capi/examples/: example.c
capi/include/: labrador_ldpc.h
capi/src/: lib.rs
perftest/: Cargo.toml  plot.py
perftest/src/: main.rs
src/: codes.rs  decoder.rs  encoder.rs  lib.rs
src/codes/: compact_generators.rs  compact_parity_checks.rs  mod.rs
