[package]
name = "labrador-ldpc"
version = "1.2.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Encoders and decoders for CCSDS LDPC error correcting codes"
keywords = ["ldpc", "ecc", "labrador", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adamgreig/labrador-ldpc"
documentation = "https://docs.rs/labrador-ldpc"

[badges]
travis-ci = { repository = "adamgreig/labrador-ldpc" }
