[package]
authors = ["Adam Greig <adam@adamgreig.com>"]
name = "labrador-ldpc-capi"
version = "0.1.4"
description = "C API for Labrador-LDPC error correcting code library"
keywords = ["ldpc", "ecc", "labrador", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adamgreig/labrador-ldpc"
documentation = "https://docs.rs/labrador-ldpc"

[dependencies]
labrador-ldpc = { version = "1.2.1", path = ".." }

[lib]
name = "labrador_ldpc"
crate-type = ["staticlib"]

[profile.dev]
panic = 'abort'
lto = true

[profile.release]
panic = 'abort'
lto = true
